# Dropper

./: 0  Cargo.toml  rust-toolchain.toml
cli/: Cargo.toml
cli/src/: main.rs
loader/: Cargo.toml  build.rs
loader/.cargo/: config.toml
loader/assets/: Resource.rc
loader/src/: cfg_manip.rs  get_payload.rs  hash.rs  intrinsics.rs  lib.rs  logger.rs  main.rs  run_payload.rs  syscalls.rs
loader/src/resolve/: function.rs  mod.rs  moonwalk.rs
loader/src/techniques/: mod.rs  pe_utils.rs  process_utils.rs
loader/src/techniques/pe/: manual_map.rs  mod.rs  process_hollowing.rs
loader/src/techniques/pe/process_ghosting/: ghost_process.rs  ghost_section.rs  mod.rs  temp_file.rs
loader/src/techniques/pe/process_herpaderping/: herpaderp_context.rs  mod.rs  overwrite_tmp_file.rs
loader/src/techniques/shellcode/: direct.rs  hypnosis.rs  mod.rs  process_hollowing.rs
shared/: Cargo.toml
shared/src/: crypt.rs  lib.rs  obf.rs
