[workspace]
resolver = "3"
members = ["cli", "loader", "shared"]
default-members = ["cli"] # Auto run cli


[profile.release]
opt-level = "z"
debug = false
lto = true
codegen-units = 1
panic = "abort"
overflow-checks = false
strip = true
incremental = false
debug-assertions = false
rpath = false

[workspace.dependencies]
shared = { path = "shared" }
